--- a/grid_and_flexbox_Tasks/grid_flexbox.css
+++ b/grid_and_flexbox_Tasks/grid_flexbox.css
@@ -1,12 +1,48 @@
-body,h2{
+h2{
     margin: 0;
+}
+.full{
+    box-shadow: 7px 12px 7px 3px rgba(0, 0, 0, 0.6);
+    border-radius: 12px;
+}
+.item1{
+ box-shadow: 6px 6px 7px  rgba(0, 0, 0, 0.6);
+ border-radius: 12px 0 12px 0 ;
+}
+.item3{
+    box-shadow: 6px 6px 7px  rgba(0, 0,0,0.6);
+    border-radius: 12px 0 12px 0;
+}
+.item6{
+    box-shadow: 6px 6px 7px rgba(0, 0, 0, 0.6);
+    border-radius: 12px;
 }
 .testinomial-grid{
     display: grid;
-    width: min(95%, 70rem);
-}
-.testinomial-grid{
+    /* width: min(95%, 70rem); */
+    gap: var(--gap,2rem);
     grid-template-columns:repeat(3,1fr);
+}
+.gradient{
+    background-image: linear-gradient(to bottom,hsl(266.25deg 28.92% 67.45%),hsl(343 33% 50% / 1));
+}
+.gradient-2{
+    background-image: linear-gradient(to bottom,hsl(64.12deg 40.16% 49.8%),hsl(233.48deg 27.38% 67.06%));
+}
+.center-four{
+    position: relative;
+    top: 3%;
+    left: 2%;
+    background-color: #f1f1f1;
+    padding: 20px;
+}
+.radius-four{
+    border-radius: 35px;
+}
+.center{
+    position: relative;
+    top: 25%;
+    left: 3%;
 }
 .flex{
     display: flex;
@@ -25,4 +61,17 @@ body,h2{
 }
 .testinomial > p:first-of-type{
     line-height: 1.2;
+}
+.grid-row-span-2{
+    grid-row: span 2;
+}
+.grid-col-span-2{
+    grid-column: span 2;
+}
+@media screen and (max-width:768px) {
+    .testinomial-grid{
+        display: flex;
+        flex-direction: column;
+
+    }
 }
