change in the .name

--- a/grid_and_flexbox_Tasks/grid_flexbox.css
+++ b/grid_and_flexbox_Tasks/grid_flexbox.css
@@ -1,4 +1,4 @@
-h2{
+.name{
     margin: 0;
     line-height: 1.77;
 }
@@ -6,12 +6,16 @@ h2{
     box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.6);
     border-radius: 12px;
 }
+.container{
+    grid-row: 2 / 4;
+    grid-column: 3 / 4;
+}
 .item1{
  box-shadow: 6px 6px 7px  rgba(0, 0, 0, 0.6);
  border-radius: 12px 0 12px 0 ;
 }
 .grid-row-span-2{
-    grid-row: span 3;
+    grid-row: span 2;
 }
 .grid-col-span-2{
     grid-column: span 2;
@@ -23,15 +27,17 @@ h2{
 .item6{
     box-shadow: 6px 6px 7px rgba(0, 0, 0, 0.6);
     border-radius: 12px;
+    height: 360px;
+    margin-top: 1.2rem;
 }
 .testinomial-grid{
     display: grid;
     /* width: min(95%, 70rem); */
     gap: var(--gap,1.5rem);
-    grid-template-columns:repeat(3,1fr);
+    grid-template-columns: 0.3fr 0.29fr 0.33fr;
+    justify-content: center;
 }
 .gradient{
-    height: 400px;
     background-image: linear-gradient(to bottom,hsl(266.25deg 28.92% 67.45%),hsl(343 33% 50% / 1));
 }
 .gradient-2{
@@ -39,8 +45,9 @@ h2{
 }
 .for-green{
     background-color: #f1f1f1;
-    padding: 20px;
+    padding: 10px;
     border-radius: 12px;
+    height: auto;
 }
 .center-four{
     display: flex;
@@ -49,11 +56,6 @@ h2{
     padding: 20px;
     border-radius: 12px;
     justify-content: center;
-    height: 340px;
-}
-.height{
-    height: 400px;
-    grid-row: span 2;
 }
 .radius-four{
     border-radius: 35px;
@@ -81,5 +83,46 @@ h2{
     .testinomial-grid{
         display: flex;
         flex-direction: column;
+    }
+    .item6{
+        height: 150px;
+    }
+    .for-green{
+        width: 96%;
+    }
+    .item1, .item6{
+        display: block;
+        height: auto;
+    }
+    .center-four{
+        padding: 7px;
+    }
+    div.first > .name,div.second > .name,div.third > .name,div.four > .name,div.five > .name{
+        line-height: 1.77;
+    }
+}
+@media screen and (max-width:996px) {
+    .first>.name{
+        line-height: 1.1;
+    }
+}
+@media screen and (max-width:972px) {
+    .second>.name{
+        line-height: 1.1;
+    }
+}
+@media screen and (max-width:930px) {
+    .third>.name{
+        line-height: 1.1;
+    }
+}
+@media screen and (max-width:959px) {
+    .four>.name{
+        line-height: 1.1;
+    }
+}
+@media screen and (max-width:851px) {
+    .five>.name{
+        line-height: 1.1;
     }
 }
