--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
 }
 
-ul {
-    position: absolute;
-    right: 20px;
-}
 
-ul>li {
+.row{
+    display: flex;
+    flex-direction: column;
+}
+div>li {
     list-style-type: none;
     float: left;
     padding: 14px 12px;
@@ -17,13 +17,15 @@ li>a {
     text-decoration: none;
     color: black;
 }
+
 li:hover {
     border: 1px solid black;
     border-radius: 14px;
 }
+
 nav {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
 }
 .btn {
     background-color: #191A23;
@@ -32,9 +34,47 @@ nav {
     border-radius: 14px;
     padding: 20px 35px 20px 35px;
 }
-h1{
+
+h1 {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 60px;
+}
+/* .main{
+    display: flex;
+    flex-wrap: wrap;
+}
+.side{
+    flex: 40%;
+} */
+.image{
+    max-width: 600px;
+    object-fit: cover;
+}
+/* .left{
+    flex-wrap: nowrap;
+}
+.right{
+    float: right;
+} */
+ .main{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 0.6fr 0.5fr;
+ }
+ .side{
+    grid-row: 1 / 2;
+ }
+.right{
+    grid-row: 1 / 3;
+}
+.left{
+    grid-row: 2 / 3;
+}
+@media screen and  (max-width:768px){
+    .main{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
 }
