--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -25,7 +25,7 @@ li:hover {
 
 nav {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .btn {
     background-color: #191A23;
@@ -41,27 +41,14 @@ h1 {
     font-style: normal;
     font-size: 60px;
 }
-/* .main{
-    display: flex;
-    flex-wrap: wrap;
-}
-.side{
-    flex: 40%;
-} */
 .image{
     max-width: 600px;
     object-fit: cover;
 }
-/* .left{
-    flex-wrap: nowrap;
-}
-.right{
-    float: right;
-} */
+
  .main{
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 0.6fr 0.5fr;
+    grid-template-columns: 1fr 1fr 1fr;
  }
  .side{
     grid-row: 1 / 2;
