--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -1,12 +1,24 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+}
+header{
+    width: 90%;
 
-.row{
+}
+.row {
     display: flex;
     flex-direction: column;
 }
+
 div>li {
     list-style-type: none;
     float: left;
@@ -19,14 +31,15 @@ li>a {
 }
 
 li:hover {
-    border: 1px solid black;
+    outline: 1px solid black;
     border-radius: 14px;
 }
 
 nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
+
 .btn {
     background-color: #191A23;
     color: #FFFFFF;
@@ -40,28 +53,36 @@ h1 {
     font-weight: 500;
     font-style: normal;
     font-size: 60px;
+    margin: 0;
 }
-.image{
-    max-width: 600px;
+
+.image {
+    max-width: 360px;
     object-fit: cover;
 }
 
- .main{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
- }
- .side{
-    grid-row: 1 / 2;
- }
-.right{
-    grid-row: 1 / 3;
+.main {
+    /* height: 100vh; */
+    width: 90%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.left{
-    grid-row: 2 / 3;
+.left-sidebar{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
 }
-@media screen and  (max-width:768px){
+.right-sidebar{
+    width: 50%;
+}
+@media screen and (max-width:768px) {
     .main{
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        flex-direction: column;
+        width: 90%;
+    }   
+    img::before(p){
+        content: "";
     }
 }
