--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -12,34 +12,23 @@ body{
 }
 header{
     width: 90%;
-
 }
-.row {
-    display: flex;
-    flex-direction: column;
-}
-
 div>li {
     list-style-type: none;
-    float: left;
-    padding: 14px 12px;
+    padding: 14px 11px;
 }
 
 li>a {
     text-decoration: none;
     color: black;
 }
-
-li:hover {
-    outline: 1px solid black;
-    border-radius: 14px;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
 }
-
+.nav{
+    display: flex;
+}
 .btn {
     background-color: #191A23;
     color: #FFFFFF;
@@ -62,7 +51,6 @@ h1 {
 }
 
 .main {
-    /* height: 100vh; */
     width: 90%;
     height: 100%;
     display: flex;
@@ -74,15 +62,107 @@ h1 {
     flex-direction: column;
     row-gap: 1rem;
 }
-.right-sidebar{
-    width: 50%;
+input{
+    display: none;
+    visibility: hidden;
 }
-@media screen and (max-width:768px) {
+.toggle{
+    display: none;
+    visibility: hidden;
+}
+.btn1{
+    background-color: #fff;
+    border: none;
+    padding: 15px 9px 15px 9px;
+    border: 1px solid black;
+    border-radius: 14px;
+}
+
+/* mobile view sidebar */
+@media screen and (max-width:768px) {   
+    .toggle{
+        display: block;
+        visibility: visible;
+    }
+    .slide{
+        width: 200px;
+        height: 100%;
+        position: fixed;
+        transition: 0.5s ease;
+        background-color: #fff;
+        transform: translateX(200px);
+        right: 0;
+        top: 0;
+        text-align: center;
+    }
+    li{
+        padding: 5px 0;
+    }
+    li a{
+        transition: 0.2s ease-in;
+    }
+    .toggle{
+        position: absolute;
+        top: 10px;
+        right: 13px;
+        width: 30px;
+        height: 30px;
+        z-index: 1;
+        background-color: #f2f2f2;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        transition: 0.5s ease;
+    }
+    .toggle .common{
+        position: absolute;
+        cursor: pointer;
+        width: 25px;
+        height: 2px;
+        background-color: #000000;
+        border-radius: 50px;
+        transition: 0.3s ease;
+    }
+    .toggle .top_line{
+        top: 30%;
+        left: 30%;
+        transform: translate(-30%,-50%);
+    }
+    .toggle .middle_line{
+        top: 50%;
+        left: 30%;
+        transform: translate(-30%,-50%);
+    }
+    .toggle .bottom_line{
+        top: 70%;
+        left: 30%;
+        transform: translate(-30%,-50%);
+    }
+    input:checked ~ .toggle .top_line{
+        top: 13px;
+        left: 2px;
+        transform: rotate(45deg);
+    }
+    input:checked ~ .toggle .bottom_line{
+        top: 13px;
+        left: 2px;
+        transform: rotate(135deg);
+    }
+    input:checked ~ .toggle .middle_line{
+        opacity: 0;
+        transform: translate(-20px);
+    }
+    input:checked ~ .slide{
+        transform: translateX(0);
+    }   
+    input:checked ~ .toggle{
+        top: 14px;
+        right: 158px;
+    }
+    /* sidebar main content */
     .main{
         flex-direction: column;
         width: 90%;
     }   
-    img::before(p){
-        content: "";
+    .nav{
+        flex-direction: column;
     }
 }
