--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -3,12 +3,19 @@
     margin: 0;
     padding: 0;
 }
+@font-face {
+    font-family: 'poppins';
+    src: url('./Poppins/Poppins-Medium.ttf');
+}
+@font-face {
+    font-family: 'pops';
+    src: url('./Poppins/Poppins-Regular.ttf');
+}
 body{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 header{
     width: 90%;
@@ -36,20 +43,15 @@ nav {
     border-radius: 14px;
     padding: 20px 35px 20px 35px;
 }
-
-h1 {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
+.p-5{
+    font-family: 'poppins';
     font-size: 60px;
     margin: 0;
 }
-
 .image {
     max-width: 360px;
     object-fit: cover;
 }
-
 .main {
     width: 90%;
     height: 100%;
@@ -77,7 +79,28 @@ input{
     border: 1px solid black;
     border-radius: 14px;
 }
-
+.center{
+    margin: 30px 0;
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.container-1{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.service{
+    border: 1px solid black;
+    background-color: #B9FF66;
+    margin-left: 20px;
+}
+.s-2{
+    
+}
 /* mobile view sidebar */
 @media screen and (max-width:768px) {   
     .toggle{
@@ -94,6 +117,7 @@ input{
         right: 0;
         top: 0;
         text-align: center;
+        font-family: 'pops';
     }
     li{
         padding: 5px 0;
