--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -83,50 +83,111 @@ input{
     margin: 30px 0;
     width: 90%;
     height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    place-items: center;
 }
 .container-1{
     width: 90%;
     height: 100%;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
 }
 .service{
-    border: 1px solid black;
     background-color: #B9FF66;
-    margin-left: 20px;
+}
+.container-2{
+    width: 90%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 26px;
+    margin-top: 26px;
+}
+.card{
+    /* display: flex;
+    width: ; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border: 1px solid black;
+    padding: 31px;
+    box-shadow: 0 5px 0 0 black;
+}
+.card1{
+    background-color: #F3F3F3;
+    border-radius: 45px;
+}
+.card2{
+    background-color: #B9FF66;
+    border-radius: 45px;
+}
+.select_1{
+    background-color: #B9FF66;
+}
+.left_side{
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+}
+.icon{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.img1{
+    width: 200px;
 }
 .s-2{
     
 }
+@media screen and (max-width:1024px) {
+    .center{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media screen and (max-width:820px) {
+    .container-2{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
 /* mobile view sidebar */
-@media screen and (max-width:768px) {   
+@media screen and (max-width:768px) { 
+    /* .btn1{
+        margin-top: 30px;
+    }   */
+    .center{
+        grid-template-columns: 1fr 1fr;
+    }
+    .container-1{
+        flex-direction: column;
+    }
     .toggle{
         display: block;
         visibility: visible;
     }
     .slide{
-        width: 200px;
+        width: 250px;
         height: 100%;
         position: fixed;
         transition: 0.5s ease;
         background-color: #fff;
-        transform: translateX(200px);
+        transform: translateX(250px);
         right: 0;
         top: 0;
         text-align: center;
         font-family: 'pops';
+        border: 1px solid black;
     }
     li{
         padding: 5px 0;
+        border-bottom: 1px solid black;
     }
     li a{
         transition: 0.2s ease-in;
     }
     .toggle{
-        position: absolute;
+        position: fixed;
         top: 10px;
         right: 13px;
         width: 30px;
@@ -178,8 +239,8 @@ input{
         transform: translateX(0);
     }   
     input:checked ~ .toggle{
-        top: 14px;
-        right: 158px;
+        top: 10px;
+        right: 200px;
     }
     /* sidebar main content */
     .main{
