--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -42,6 +42,7 @@ nav {
     border: none;
     border-radius: 14px;
     padding: 20px 35px 20px 35px;
+    width: 264px;
 }
 .p-5{
     font-family: 'poppins';
@@ -94,51 +95,42 @@ input{
     align-items: center;
     gap: 20px;
 }
-.service{
-    background-color: #B9FF66;
-}
 .container-2{
+    display: grid;
     width: 90%;
-    height: 100%;
-    display: grid;
+    height: 100%;  
     grid-template-columns: 1fr 1fr;
-    gap: 26px;
-    margin-top: 26px;
-}
-.card{
-    /* display: flex;
-    width: ; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    border: 1px solid black;
-    padding: 31px;
-    box-shadow: 0 5px 0 0 black;
-}
-.card1{
-    background-color: #F3F3F3;
-    border-radius: 45px;
-}
-.card2{
-    background-color: #B9FF66;
-    border-radius: 45px;
-}
-.select_1{
-    background-color: #B9FF66;
-}
-.left_side{
-    display: grid;
-    grid-template-rows: 3fr 1fr;
-}
-.icon{
-    display: flex;
-    align-items: center;
     gap: 10px;
 }
-.img1{
-    width: 200px;
+.center1{
+    display: flex;
+    justify-content: space-evenly;
+    border: 1px solid black;
+    border-radius: 45px;
+    padding: 22px;
 }
-.s-2{
-    
+.left-side{
+    display: flex;
+    flex-direction: column;
+   justify-content: space-between;
+}
+.right-side{
+    display: flex;
+    align-items: cn;
+}
+.text1{
+    display: flex;
+    flex-direction: column;
+}
+.label{
+    font-family: 'poppins';
+    font-weight: 500;
+    font-size: 17px;
+}
+.text2{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 @media screen and (max-width:1024px) {
     .center{
@@ -146,21 +138,28 @@ input{
     }
 }
 @media screen and (max-width:820px) {
-    .container-2{
-        display: grid;
-        grid-template-columns: 1fr;
+    .img1{
+        width: 165px;
+        height: 129px;
     }
 }
 /* mobile view sidebar */
 @media screen and (max-width:768px) { 
-    /* .btn1{
+    .btn1{
         margin-top: 30px;
-    }   */
+    }  
     .center{
         grid-template-columns: 1fr 1fr;
     }
     .container-1{
         flex-direction: column;
+    }
+    .container-2{
+        grid-template-columns: 1fr;
+    }
+    .none{
+        display: none;
+        visibility: none;
     }
     .toggle{
         display: block;
