remove sticky in header, set image .right class, and make black box.

--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -3,38 +3,47 @@
     margin: 0;
     padding: 0;
 }
+
 @font-face {
     font-family: 'poppins';
     src: url('./Poppins/Poppins-Medium.ttf');
 }
+
 @font-face {
     font-family: 'pops';
     src: url('./Poppins/Poppins-Regular.ttf');
 }
-body{
+
+body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-header{
+
+header {
     width: 90%;
 }
+
 div>li {
     list-style-type: none;
     padding: 14px 11px;
 }
+
 li>a {
     text-decoration: none;
     color: black;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
 }
-.nav{
+
+.nav {
     display: flex;
 }
+
 .btn {
     background-color: #191A23;
     color: #FFFFFF;
@@ -43,14 +52,24 @@ nav {
     padding: 20px 35px 20px 35px;
     width: 264px;
 }
-.p-5{
+
+.p-5 {
     font-family: 'poppins';
     margin: 0;
+    font-weight: 500;
 }
+
+.normal {
+    font-family: 'poppins';
+    margin: 0;
+    font-weight: 500;
+}
+
 .image {
     max-width: 360px;
     object-fit: cover;
 }
+
 .main {
     width: 90%;
     height: 100%;
@@ -58,27 +77,32 @@ nav {
     justify-content: center;
     align-items: center;
 }
-.left-sidebar{
+
+.left-sidebar {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
 }
-input{
+
+input {
     display: none;
     visibility: hidden;
 }
-.toggle{
+
+.toggle {
     display: none;
     visibility: hidden;
 }
-.btn1{
+
+.btn1 {
     background-color: #fff;
     border: none;
     padding: 15px 9px 15px 9px;
     border: 1px solid black;
     border-radius: 14px;
 }
-.center{
+
+.center {
     margin: 30px 0;
     width: 90%;
     height: 100%;
@@ -86,27 +110,41 @@ input{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     place-items: center;
 }
-.container-1{
+
+.container-1 {
     width: 90%;
     height: 100%;
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.service{
+
+.container-4 {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 20px;
+}
+
+.service {
     background-color: #B9FF66;
     border-radius: 6px;
     padding: 6px;
+    text-align: center;
 }
-.container-2{
+
+.container-2 {
     display: grid;
     width: 90%;
-    height: 100%;  
+    height: 100%;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
     margin-top: 30px;
 }
-.center1{
+
+.center1 {
     display: flex;
     justify-content: space-evenly;
     border: 1px solid black;
@@ -127,116 +165,229 @@ input{
     border-radius: 30px;
     padding: 10px; */
 }
-.c-1{
+
+.c-1 {
     background-color: #F3F3F3;
 }
-.c-2{
+
+.c-2 {
     background-color: #B9FF66;
 }
-.c-3{
+
+.c-3 {
     background-color: #191A23;
 }
-.left-side{
+
+.left-side {
     display: flex;
     flex-direction: column;
-   justify-content: space-between;
-   row-gap: 72px;
+    justify-content: space-between;
+    row-gap: 72px;
 }
-.right-side{
+
+.right-side {
     display: flex;
     align-items: center;
 }
-.img1{
+
+.img1 {
     width: 210px;
     height: 166.05px;
 }
-.img3{
+
+.img3 {
     width: 208.85px;
     height: 166.05px;
 }
-.text1{
+
+.text1 {
     display: flex;
     flex-direction: column;
 }
-.label{
+
+.label {
     font-family: 'poppins';
     font-weight: 500;
     font-size: 17px;
 }
-.label1{
+
+.label1 {
     background-color: #B9FF66;
 }
-.label2{
+
+.label2 {
     background-color: #FFFFFF;
 }
-.label3{
+
+.label3 {
     background-color: #FFFFFF;
 }
-.label5{
+
+.label5 {
     background-color: #B9FF66;
 }
-.text2{
+
+.text2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.container-3{
+
+.container-3 {
     display: flex;
     justify-content: space-between;
     width: 90%;
     height: 100%;
     background-color: #F3F3F3;
     margin-top: 30px;
-    padding: 27px;
+    padding: 14px;
 }
-.left{
+
+.left {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    row-gap: 26px;
 }
-.medium{
+
+.medium {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
 }
-.m-4{
+
+.m-4 {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
+
+.s-3 {
+    object-fit: cover;
+    position: relative;
+    bottom: 40px;
+    object-position: left;
+}
+
+.container-5 {
+    display: flex;
+    width: 90%;
+    padding: 30px;
+    background-color: #191A23;
+    border-radius: 25px;
+    column-gap: 64px;
+}
+
+.center2 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-right: 1px solid #FFFFFF;
+    padding-right: 40px;
+}
+
+.right1 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.white {
+    color: white;
+    font-family: 'poppins';
+    font-weight: 400;
+}
+
+.center3 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-right: 1px solid #FFFFFF;
+    padding-right: 40px;
+}
+
+.center4 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #B9FF66;
+}
+
 @media screen and (max-width:1024px) {
-    .center{
+    .center {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
+
 /* mobile view sidebar */
-@media screen and (max-width:768px) { 
-    .img1{
+@media screen and (max-width:768px) {
+    header {
+        position: sticky;
+        top: 10px;
+    }
+
+    .img1 {
         width: 165px;
         height: 129px;
-    } 
-    .img3{
+    }
+
+    .img3 {
         width: 165px;
         height: 129px;
-    } 
-    .center{
+    }
+
+    .center {
         grid-template-columns: 1fr 1fr;
     }
-    .container-1{
+
+    .container-1 {
         flex-direction: column;
+        text-align: center;
     }
-    .container-2{
+
+    .container-4 {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .container-2 {
         grid-template-columns: 1fr;
     }
-    .none{
+
+    .container-5 {
+        flex-direction: column;
+        row-gap: 40px;
+    }
+
+    .center2 {
+        border-right: none;
+        border-bottom: 1px solid #FFFFFF;
+        padding-bottom: 40px;
+        padding-right: 0;
+    }
+
+    .center3 {
+        border-right: none;
+        border-bottom: 1px solid #FFFFFF;
+        padding-bottom: 40px;
+        padding-right: 0;
+    }
+
+    .none {
         display: none;
         visibility: none;
     }
-    .toggle{
+
+    .toggle {
         display: block;
         visibility: visible;
     }
-    .slide{
+
+    .slide {
         width: 100%;
         height: 100%;
         position: fixed;
@@ -248,24 +399,27 @@ input{
         text-align: center;
         font-family: 'pops';
     }
-    li{
+
+    li {
         padding: 5px 0;
     }
-    li a{
+
+    li a {
         transition: 0.2s ease-in;
     }
-    .toggle{
+
+    .toggle {
         position: absolute;
-        top: 10px;
+        top: 5px;
         right: 13px;
         width: 30px;
         height: 30px;
         z-index: 1;
         background-color: #f2f2f2;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         transition: 0.5s ease;
     }
-    .toggle .common{
+
+    .toggle .common {
         position: absolute;
         cursor: pointer;
         width: 25px;
@@ -274,48 +428,62 @@ input{
         border-radius: 50px;
         transition: 0.3s ease;
     }
-    .toggle .top_line{
+
+    .toggle .top_line {
         top: 30%;
         left: 30%;
-        transform: translate(-30%,-50%);
+        transform: translate(-30%, -50%);
     }
-    .toggle .middle_line{
+
+    .toggle .middle_line {
         top: 50%;
         left: 30%;
-        transform: translate(-30%,-50%);
+        transform: translate(-30%, -50%);
     }
-    .toggle .bottom_line{
+
+    .toggle .bottom_line {
         top: 70%;
         left: 30%;
-        transform: translate(-30%,-50%);
+        transform: translate(-30%, -50%);
     }
-    input:checked ~ .toggle .top_line{
+
+    input:checked~.toggle .top_line {
         top: 13px;
         left: 2px;
         transform: rotate(45deg);
     }
-    input:checked ~ .toggle .bottom_line{
+
+    input:checked~.toggle .bottom_line {
         top: 13px;
         left: 2px;
         transform: rotate(135deg);
     }
-    input:checked ~ .toggle .middle_line{
+
+    input:checked~.toggle .middle_line {
         opacity: 0;
         transform: translate(-20px);
     }
-    input:checked ~ .slide{
+
+    input:checked~.slide {
         transform: translateX(0);
-    }   
-    input:checked ~ .toggle{
+    }
+
+    input:checked~.toggle {
         top: 10px;
         right: 90%;
     }
+
     /* sidebar main content */
-    .main{
+    .main {
         flex-direction: column;
         width: 90%;
-    }   
-    .nav{
+    }
+
+    .nav {
         flex-direction: column;
+    }
+
+    .right {
+        display: none;
     }
 }
