--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -21,8 +21,9 @@ body {
     align-items: center;
 }
 
-header {
+header { 
     width: 90%;
+    padding: 23px 0 50px 0;
 }
 
 div>li {
@@ -38,6 +39,7 @@ li>a {
 nav {
     display: flex;
     justify-content: space-between;
+    padding: 5px; 
 }
 
 .nav {
@@ -97,9 +99,9 @@ input {
 .btn1 {
     background-color: #fff;
     border: none;
-    padding: 15px 9px 15px 9px;
+    padding: 15px 25px;
     border: 1px solid black;
-    border-radius: 14px;
+    border-radius: 10px;
 }
 
 .center {
@@ -125,7 +127,7 @@ input {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin: 20px;
+    margin: 50px 0;
 }
 
 .service {
@@ -316,7 +318,55 @@ a {
     text-decoration: none;
     color: #B9FF66;
 }
-
+.container-6{
+    width: 90%;
+}
+details{
+    border-radius: 45px;
+    padding: 40px;
+    background-color: #F3F3F3;
+    margin-bottom: 30px;
+    box-shadow: 0 9px 0 rgba(0, 0, 0, 0.9);
+}
+summary{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 5px;
+    /* position: relative; */
+    list-style: none;
+}
+.left2{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+summary::after{
+    content: '+';
+    font-size: 2.75em;
+    padding: 0.75rem;
+    border: 1px solid black;
+    background-color: rgba(0, 0, 255, 0.1);
+    border-radius: 50%;
+    line-height: 0.6;
+    aspect-ratio: 0;
+    border: none;
+}
+details[open] {
+    summary{
+        &::after{
+            content: "−";
+            background-color: #F3F3F3;
+        }
+    }
+}
+details[open] {
+    background-color: #B9FF66;
+}
+.p1{
+    border-top: 1px solid black;
+    padding: 28px 0;
+}
 @media screen and (max-width:1024px) {
     .center {
         grid-template-columns: 1fr 1fr 1fr;
@@ -381,12 +431,6 @@ a {
         display: none;
         visibility: none;
     }
-
-    .toggle {
-        display: block;
-        visibility: visible;
-    }
-
     .slide {
         width: 100%;
         height: 100%;
@@ -398,6 +442,8 @@ a {
         top: 0;
         text-align: center;
         font-family: 'pops';
+        padding: 10px 0 44px 0;
+        align-items: center;
     }
 
     li {
@@ -409,8 +455,11 @@ a {
     }
 
     .toggle {
+        display: block;
+        visibility: visible;
         position: absolute;
-        top: 5px;
+        /* top: 5px; */
+        top: 32px;
         right: 13px;
         width: 30px;
         height: 30px;
@@ -482,7 +531,9 @@ a {
     .nav {
         flex-direction: column;
     }
-
+    nav{
+        background-color: darkgrey;
+    }
     .right {
         display: none;
     }
