--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -24,6 +24,7 @@ body {
 header { 
     width: 90%;
     padding: 23px 0 30px 0;
+    z-index: 1;
 }
 
 div>li {
@@ -153,19 +154,6 @@ input {
     border-radius: 20px;
     padding: 15px;
     column-gap: 11px;
-
-    /* display: flex;
-    justify-content: space-evenly;
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 10px;
-    row-gap: 40px; */
-
-    /* display: flex;
-    justify-content: space-evenly;
-    border: 1px solid black;
-    border-radius: 30px;
-    padding: 10px; */
 }
 
 .c-1 {
@@ -239,17 +227,19 @@ input {
     display: flex;
     justify-content: space-between;
     width: 90%;
-    height: 100%;
+    height: 272px;
     background-color: #F3F3F3;
     margin-top: 30px;
-    padding: 14px;
+    padding: 0px 46px;
+    gap: 60px;
+    border-radius: 35px;
 }
 
 .left {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 26px;
+    row-gap: 20px;
 }
 
 .medium {
@@ -266,9 +256,11 @@ input {
 
 .s-3 {
     object-fit: cover;
-    position: relative;
-    bottom: 40px;
     object-position: left;
+    width: 317px;
+    height: 302px;
+    position: relative;
+    bottom: 19px;
 }
 
 .container-5 {
@@ -366,6 +358,43 @@ details[open] {
 .p1{
     border-top: 1px solid black;
     padding: 28px 0;
+}
+.container-7{
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+}
+.center5{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 28px 24px 10px 28px;
+    border-radius: 35px;
+}
+.top{
+    position: relative;
+    display: flex;
+    gap: 12px;
+    padding: 10px 0;
+    place-items: center;
+}
+.pic1{
+    width: 80px;
+    height: 80px;
+}
+.pic2{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.bottom{
+    padding: 20px 0px;
+    border-top: 1px solid black;
+}
+.right3{
+    display: flex;
+    flex-direction: column;
 }
 @media screen and (max-width:1024px) {
     .center {
@@ -537,4 +566,7 @@ details[open] {
     .right {
         display: none;
     }
-}
+    .container-7{
+        grid-template-columns: 1fr;
+    }
+}                                               
