--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -104,7 +104,16 @@ input {
     border: 1px solid black;
     border-radius: 10px;
 }
+.button{
+    padding: 40px 0;
+    width: 90%;
+    display: flex;
+    justify-content: flex-end;
+}
+.btn2 {
 
+    padding: 20px 0 20px 0;
+}
 .center {
     margin: 30px 0;
     width: 90%;
@@ -379,14 +388,17 @@ details[open] {
     padding: 10px 0;
     place-items: center;
 }
+.linkdine-img{
+    background-color: #000000;
+    border-radius: 50%;
+    padding: 7px 9px;
+    position: absolute;
+    top: -13px;
+    right: -13px;
+}
 .pic1{
     width: 80px;
     height: 80px;
-}
-.pic2{
-    position: absolute;
-    right: 0;
-    top: 0;
 }
 .bottom{
     padding: 20px 0px;
@@ -396,6 +408,135 @@ details[open] {
     display: flex;
     flex-direction: column;
 }
+.button{
+    justify-content: center;
+}
+
+/* carousel code  */
+#slider {
+    margin: 0 auto;
+    width: 800px;
+    max-width: 100%;
+    text-align: center;
+ }
+ #slider input[type=radio] {
+    display: none;
+ }
+ #slider label {
+    cursor:pointer;
+    text-decoration: none;
+ }
+ #slides {
+    padding: 10px;
+    border: 3px solid #ccc;
+    background: #000000;
+    position: relative;
+    z-index: 1;
+ }
+ #overflow {
+    width: 100%;
+    overflow: hidden;
+ }
+ #slide1:checked ~ #slides .inner {
+    margin-left: 0;
+ }
+ #slide2:checked ~ #slides .inner {
+    margin-left: -100%;
+ }
+ #slide3:checked ~ #slides .inner {
+    margin-left: -200%;
+ }
+ #slide4:checked ~ #slides .inner {
+    margin-left: -300%;
+ }
+ #slides .inner {
+    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+    width: 400%;
+    line-height: 0;
+    height: 500px;
+ }
+ #slides .slide {
+    width: 25%;
+    float:left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: #fff;
+ }
+
+ #controls {
+    margin: -180px 0 0 0;
+    width: 100%;
+    height: 50px;
+    z-index: 3;
+    position: relative;
+ }
+ #controls label {
+    transition: opacity 0.2s ease-out;
+    display: none;
+    width: 50px;
+    height: 50px;
+    opacity: .4;
+ }
+ #controls label:hover {
+    opacity: 1;
+ }
+ #slide1:checked ~ #controls label:nth-child(2),
+ #slide2:checked ~ #controls label:nth-child(3),
+ #slide3:checked ~ #controls label:nth-child(4),
+ #slide4:checked ~ #controls label:nth-child(1) {
+    background: url(https://image.flaticon.com/icons/svg/130/130884.svg) no-repeat;
+    float:right;
+    margin: 0 -50px 0 0;
+    display: block;
+ }
+ #slide1:checked ~ #controls label:nth-last-child(2),
+ #slide2:checked ~ #controls label:nth-last-child(3),
+ #slide3:checked ~ #controls label:nth-last-child(4),
+ #slide4:checked ~ #controls label:nth-last-child(1) {
+    background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
+    float:left;
+    margin: 0 0 0 -50px;
+    display: block;
+ }
+ #bullets {
+    /* margin: 150px 0 0; */
+    text-align: center;
+ }
+ #bullets label {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-image: url(./png/Vector_bullets.png);
+    margin: 0 10px;
+    background: #fff;
+ }
+ #slide1:checked ~ #bullets label:nth-child(1),
+ #slide2:checked ~ #bullets label:nth-child(2),
+ #slide3:checked ~ #bullets label:nth-child(3),
+ #slide4:checked ~ #bullets label:nth-child(4) {
+    background: #B9FF66;
+ }
+ @media screen and (max-width: 900px) {
+    #slide1:checked ~ #controls label:nth-child(2),
+    #slide2:checked ~ #controls label:nth-child(3),
+    #slide3:checked ~ #controls label:nth-child(4),
+    #slide4:checked ~ #controls label:nth-child(1),
+    #slide1:checked ~ #controls label:nth-last-child(2),
+    #slide2:checked ~ #controls label:nth-last-child(3),
+    #slide3:checked ~ #controls label:nth-last-child(4),
+    #slide4:checked ~ #controls label:nth-last-child(1) {
+       margin: 0;
+    }
+    #slides {
+       max-width: calc(100% - 140px);
+       margin: 0 auto;
+    }
+ }
+
+ /* \end{code} */
+
 @media screen and (max-width:1024px) {
     .center {
         grid-template-columns: 1fr 1fr 1fr;
@@ -408,7 +549,6 @@ details[open] {
         position: sticky;
         top: 10px;
     }
-
     .img1 {
         width: 165px;
         height: 129px;
@@ -493,7 +633,6 @@ details[open] {
         width: 30px;
         height: 30px;
         z-index: 1;
-        background-color: #f2f2f2;
         transition: 0.5s ease;
     }
 
@@ -559,9 +698,6 @@ details[open] {
 
     .nav {
         flex-direction: column;
-    }
-    nav{
-        background-color: darkgrey;
     }
     .right {
         display: none;
