--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -415,8 +415,7 @@ details[open] {
 /* carousel code  */
 #slider {
     margin: 0 auto;
-    width: 800px;
-    max-width: 100%;
+    width: 90%;
     text-align: center;
  }
  #slider input[type=radio] {
@@ -466,7 +465,7 @@ details[open] {
  }
 
  #controls {
-    margin: -180px 0 0 0;
+    margin: -36px 0 0 0;
     width: 100%;
     height: 50px;
     z-index: 3;
@@ -486,19 +485,20 @@ details[open] {
  #slide2:checked ~ #controls label:nth-child(3),
  #slide3:checked ~ #controls label:nth-child(4),
  #slide4:checked ~ #controls label:nth-child(1) {
-    background: url(https://image.flaticon.com/icons/svg/130/130884.svg) no-repeat;
-    float:right;
-    margin: 0 -50px 0 0;
+    background: url('./png/Arrow\ right.png') no-repeat;
+    float: right;
+    margin: 0 180px 0 0;
     display: block;
  }
  #slide1:checked ~ #controls label:nth-last-child(2),
  #slide2:checked ~ #controls label:nth-last-child(3),
  #slide3:checked ~ #controls label:nth-last-child(4),
  #slide4:checked ~ #controls label:nth-last-child(1) {
-    background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
+    background: url('./png/Arrow\ left.png') no-repeat;
     float:left;
-    margin: 0 0 0 -50px;
+    margin: 0 0 0 180px;
     display: block;
+    color: white;
  }
  #bullets {
     /* margin: 150px 0 0; */
@@ -510,7 +510,11 @@ details[open] {
     height: 10px;
     background-image: url(./png/Vector_bullets.png);
     margin: 0 10px;
-    background: #fff;
+    background: #FFFFFF;
+ }
+ .message-box{
+    width: 500px;
+    height: 500px;
  }
  #slide1:checked ~ #bullets label:nth-child(1),
  #slide2:checked ~ #bullets label:nth-child(2),
