--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -411,60 +411,58 @@ details[open] {
 .button{
     justify-content: center;
 }
-
-/* carousel code  */
-#slider {
-    margin: 0 auto;
+/* slider code */
+#slider{
     width: 90%;
     text-align: center;
- }
- #slider input[type=radio] {
+}
+#slider input[type=radio]{
     display: none;
- }
- #slider label {
-    cursor:pointer;
+}
+#slider label {
     text-decoration: none;
- }
- #slides {
+}
+#slides{
     padding: 10px;
     border: 3px solid #ccc;
     background: #000000;
     position: relative;
     z-index: 1;
- }
- #overflow {
+}
+#slides .inner{
+    transition: margin-left 800ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    width: 400%;
+    line-height: 1;
+    height: 500px;
+}
+#overflow{
     width: 100%;
     overflow: hidden;
- }
- #slide1:checked ~ #slides .inner {
-    margin-left: 0;
- }
- #slide2:checked ~ #slides .inner {
-    margin-left: -100%;
- }
- #slide3:checked ~ #slides .inner {
-    margin-left: -200%;
- }
- #slide4:checked ~ #slides .inner {
-    margin-left: -300%;
- }
- #slides .inner {
-    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-    width: 400%;
-    line-height: 0;
-    height: 500px;
- }
- #slides .slide {
+}
+#slides .slide {
     width: 25%;
-    float:left;
+    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-    color: #fff;
- }
-
- #controls {
+    color: #FFFFFF;
+}
+.bullet-container{
+    display: flex;
+    justify-content: center;
+}
+#bullets{
+    width: 150px;
+}
+#bullets label{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-image: url('./png/Vector_bullets.png');
+    margin:  0 10px;
+}
+#controls {
     margin: -36px 0 0 0;
     width: 100%;
     height: 50px;
@@ -476,7 +474,7 @@ details[open] {
     display: none;
     width: 50px;
     height: 50px;
-    opacity: .4;
+    opacity: 0.4;
  }
  #controls label:hover {
     opacity: 1;
@@ -494,53 +492,98 @@ details[open] {
  #slide2:checked ~ #controls label:nth-last-child(3),
  #slide3:checked ~ #controls label:nth-last-child(4),
  #slide4:checked ~ #controls label:nth-last-child(1) {
-    background: url('./png/Arrow\ left.png') no-repeat;
+    background: url('./png/Arrow_left.png') no-repeat;
     float:left;
     margin: 0 0 0 180px;
     display: block;
     color: white;
  }
- #bullets {
-    /* margin: 150px 0 0; */
+#slide1:checked ~ #slides .inner{
+    margin-left: 0;
+}
+#slide2:checked ~ #slides .inner{
+    margin-left: -100%;
+}
+#slide3:checked ~ #slides.inner{
+    margin-left: -300%;
+}
+#slide4:checked ~ #slides .inner{
+    margin-left: -400px;
+}
+
+/* footer code */
+footer{
+    background-color: #000000;
+    width: 90%;
+    padding: 50px 50px;
+    margin: 100px 0;
+}
+.top-side{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 20px;
+}
+.center-bar{
+    display: flex;
+}
+.c-icon{
+    background-color: white;
+    padding: 7px 9px;
+    border-radius: 50%;
+}
+.right-side-bar{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact{
+    background-color: #B9FF66;
+    border-radius: 6px;
+    padding: 6px;
     text-align: center;
- }
- #bullets label {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-image: url(./png/Vector_bullets.png);
-    margin: 0 10px;
-    background: #FFFFFF;
- }
- .message-box{
-    width: 500px;
-    height: 500px;
- }
- #slide1:checked ~ #bullets label:nth-child(1),
- #slide2:checked ~ #bullets label:nth-child(2),
- #slide3:checked ~ #bullets label:nth-child(3),
- #slide4:checked ~ #bullets label:nth-child(4) {
-    background: #B9FF66;
- }
- @media screen and (max-width: 900px) {
-    #slide1:checked ~ #controls label:nth-child(2),
-    #slide2:checked ~ #controls label:nth-child(3),
-    #slide3:checked ~ #controls label:nth-child(4),
-    #slide4:checked ~ #controls label:nth-child(1),
-    #slide1:checked ~ #controls label:nth-last-child(2),
-    #slide2:checked ~ #controls label:nth-last-child(3),
-    #slide3:checked ~ #controls label:nth-last-child(4),
-    #slide4:checked ~ #controls label:nth-last-child(1) {
-       margin: 0;
-    }
-    #slides {
-       max-width: calc(100% - 140px);
-       margin: 0 auto;
-    }
- }
-
- /* \end{code} */
-
+    width: 150px;
+    font-family: 'poppins';
+}
+.center6{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px;
+}
+.white1{
+    color: #FFFFFF;
+    text-decoration: underline;
+}
+input[type=email]{
+    display: block;
+    visibility: visible;
+    padding: 20px 21px;
+    background-color: #000000;
+    outline-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+}
+.left-side2{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.rightside2{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background-color: #292A32;
+    padding: 20px 20px;
+}
+.contact2{
+    background-color: #B9FF66;
+    border-radius: 10px;
+    padding: 13px 13px;
+    text-align: center;
+    width: 240px;
+    font-family: 'poppins';
+    font-size: 20px;
+}
 @media screen and (max-width:1024px) {
     .center {
         grid-template-columns: 1fr 1fr 1fr;
