--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -515,17 +515,21 @@ details[open] {
 footer{
     background-color: #000000;
     width: 90%;
-    padding: 50px 50px;
-    margin: 100px 0;
+    /* padding: 50px 50px; */
+    margin: 100px 0 0 0;
+    border-radius: 30px;
 }
 .top-side{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 20px;
+    padding: 50px 50px;
 }
 .center-bar{
     display: flex;
+}
+.bottom-side{
+    padding: 0 31px;
 }
 .c-icon{
     background-color: white;
@@ -534,25 +538,27 @@ footer{
 }
 .right-side-bar{
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
 }
 
 .contact{
     background-color: #B9FF66;
     border-radius: 6px;
-    padding: 6px;
     text-align: center;
-    width: 150px;
+    width: 120px;
     font-family: 'poppins';
 }
 .center6{
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px;
+    padding: 0px 20px 50px 20px;
 }
 .white1{
     color: #FFFFFF;
     text-decoration: underline;
+    font-size: 16px;
+    font-family: 'poppins';
+    padding: auto;
 }
 input[type=email]{
     display: block;
@@ -574,6 +580,11 @@ input[type=email]{
     gap: 20px;
     background-color: #292A32;
     padding: 20px 20px;
+    border-radius: 10px;
+}
+.visible{
+    display: none;
+    visibility: hidden;
 }
 .contact2{
     background-color: #B9FF66;
@@ -584,12 +595,92 @@ input[type=email]{
     font-family: 'poppins';
     font-size: 20px;
 }
+.privacy{
+    margin: 10px 20px;
+    display: flex;
+    border-top: 1px solid white;
+    padding: 50px 0;
+    gap: 20px;
+}
+.image1{
+    display: flex;
+    width: 90%;
+    gap: 400px;
+}
+.img2 {
+    object-fit: revert;
+    max-width: 383px;
+    height: 619px;
+    object-position: 174px 0px;
+}
 @media screen and (max-width:1024px) {
     .center {
         grid-template-columns: 1fr 1fr 1fr;
     }
+    .image1 {
+        padding: 0 0 0 76px;
+    }
+    .img2{
+        display: none;
+    }
 }
-
+@media screen and (max-width:1000px) {
+    .right1{
+        justify-content: center;
+    }
+    .top-side{
+        flex-direction: column;
+        align-items: center;
+    }
+    .center-bar{
+        flex-direction: column;
+        align-items: center;
+    }
+    .bottom-side{
+        padding: 0;
+    }
+    .right-side-bar{
+        display: none;
+        visibility: hidden;
+    }
+    .center6{
+        flex-direction: column;
+    }
+    .left-side2{
+        align-items: center;
+    }
+    .rightside2{
+        flex-direction: column;
+        margin: 40px 0;
+    }
+    input[type=email]{
+        width: 100%;
+    }
+    .contact{
+        margin: 0 0 30px 0;
+    }
+    .contact2{
+        width: 100%;
+    }
+    .white{
+        text-align: center;
+    }
+    .white1{
+        text-decoration: none;
+        text-align: center;
+    }
+    .privacy{
+        flex-direction: column;
+        gap: 0;
+    }
+    .visible{
+        display: flex;
+        visibility:visible;
+        justify-content: center;
+        gap: 20px;
+    }
+    
+}
 /* mobile view sidebar */
 @media screen and (max-width:768px) {
     header {
