--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -412,103 +412,8 @@ details[open] {
     justify-content: center;
 }
 /* slider code */
-#slider{
-    width: 90%;
-    text-align: center;
-}
-#slider input[type=radio]{
-    display: none;
-}
-#slider label {
-    text-decoration: none;
-}
-#slides{
-    padding: 10px;
-    border: 3px solid #ccc;
-    background: #000000;
-    position: relative;
-    z-index: 1;
-}
-#slides .inner{
-    transition: margin-left 800ms cubic-bezier(0.075, 0.82, 0.165, 1);
-    width: 400%;
-    line-height: 1;
-    height: 500px;
-}
-#overflow{
-    width: 100%;
-    overflow: hidden;
-}
-#slides .slide {
-    width: 25%;
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    color: #FFFFFF;
-}
-.bullet-container{
-    display: flex;
-    justify-content: center;
-}
-#bullets{
-    width: 150px;
-}
-#bullets label{
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-image: url('./png/Vector_bullets.png');
-    margin:  0 10px;
-}
-#controls {
-    margin: -36px 0 0 0;
-    width: 100%;
-    height: 50px;
-    z-index: 3;
-    position: relative;
- }
- #controls label {
-    transition: opacity 0.2s ease-out;
-    display: none;
-    width: 50px;
-    height: 50px;
-    opacity: 0.4;
- }
- #controls label:hover {
-    opacity: 1;
- }
- #slide1:checked ~ #controls label:nth-child(2),
- #slide2:checked ~ #controls label:nth-child(3),
- #slide3:checked ~ #controls label:nth-child(4),
- #slide4:checked ~ #controls label:nth-child(1) {
-    background: url('./png/Arrow\ right.png') no-repeat;
-    float: right;
-    margin: 0 180px 0 0;
-    display: block;
- }
- #slide1:checked ~ #controls label:nth-last-child(2),
- #slide2:checked ~ #controls label:nth-last-child(3),
- #slide3:checked ~ #controls label:nth-last-child(4),
- #slide4:checked ~ #controls label:nth-last-child(1) {
-    background: url('./png/Arrow_left.png') no-repeat;
-    float:left;
-    margin: 0 0 0 180px;
-    display: block;
-    color: white;
- }
-#slide1:checked ~ #slides .inner{
-    margin-left: 0;
-}
-#slide2:checked ~ #slides .inner{
-    margin-left: -100%;
-}
-#slide3:checked ~ #slides.inner{
-    margin-left: -300%;
-}
-#slide4:checked ~ #slides .inner{
-    margin-left: -400px;
+.carousel{
+
 }
 
 /* footer code */
@@ -605,11 +510,12 @@ input[type=email]{
 .image1{
     display: flex;
     width: 90%;
-    gap: 400px;
+    /* gap: 400px; */
+    justify-content: space-between;
 }
 .img2 {
-    object-fit: revert;
-    max-width: 383px;
+    object-fit: cover;
+    max-width: 530px;
     height: 619px;
     object-position: 174px 0px;
 }
@@ -842,5 +748,8 @@ input[type=email]{
     }
     .container-7{
         grid-template-columns: 1fr;
+    }
+    footer{
+        border-radius: 0px;
     }
 }                                               
