--- a/carousel/slider.css
+++ b/carousel/slider.css
@@ -172,95 +172,39 @@
    }
  }
  
- @keyframes snap {
-   96% {
-     scroll-snap-align: center;
-   }
-   97% {
-     scroll-snap-align: none;
-   }
-   99% {
-     scroll-snap-align: none;
-   }
-   100% {
-     scroll-snap-align: center;
-   }
- }
- 
- body {
-   max-width: 37.5rem;
-   margin: 0 auto;
-   padding: 0 1.25rem;
-   font-family: 'Lato', sans-serif;
- }
- 
- * {
-   box-sizing: border-box;
-   scrollbar-color: transparent transparent; /* thumb and track color */
-   scrollbar-width: 0px;
- }
- 
- *::-webkit-scrollbar {
-   width: 0;
- }
- 
- *::-webkit-scrollbar-track {
-   background: transparent;
- }
- 
- *::-webkit-scrollbar-thumb {
-   background: transparent;
-   border: none;
- }
- 
- * {
-   -ms-overflow-style: none;
- }
- 
  ol, li {
    list-style: none;
    margin: 0;
    padding: 0;
  }
- 
  .carousel {
    position: relative;
-   padding-top: 75%;
-   filter: drop-shadow(0 0 10px #0003);
-   perspective: 100px;
+   width: 90%;
  }
  
  .carousel__viewport {
-   /* position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0; */
    display: flex;
-   overflow-x: scroll;
-   /* counter-reset: item; */
+   overflow-x: hidden;
    scroll-behavior: smooth;
-   /* scroll-snap-type: x mandatory; */
  }
  
  .carousel__slide {
-   position: relative;
-   flex: 0 0 100%;
-   width: 100%;
-   height: 450px;
-   background-color: #f99;
-   /* counter-increment: item; */
-   display: flex;
-   align-items: center;
-   justify-content: center;
+  position: relative;
+  flex: 0 0 100%;
+  width: 100%;
+  height: 365px;
+  background-color: #191A23;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25px;
  }
  
  .carousel__slide:nth-child(even) {
-   background-color: #99f;
+   background-color: #191A23;
  }
  
  .carousel__slide:before {
-   /* content: counter(item); */
    position: absolute;
    top: 50%;
    left: 50%;
@@ -283,17 +227,10 @@
      animation-name: tonext, snap;
      animation-timing-function: ease;
      animation-duration: 4s;
-     animation-iteration-count: infinite;
    }
  
    .carousel__slide:last-child .carousel__snapper {
      animation-name: tostart, snap;
-   }
- }
- 
- @media (prefers-reduced-motion: reduce) {
-   .carousel__snapper {
-     animation-name: none;
    }
  }
  
@@ -305,7 +242,7 @@
  .carousel__navigation {
    position: absolute;
    right: 0;
-   bottom: 0;
+   bottom: 18px;
    left: 0;
    text-align: center;
  }
@@ -319,11 +256,6 @@
    display: inline-block;
    width: 1.5rem;
    height: 1.5rem;
-   background-color: #333;
-   background-clip: content-box;
-   border: 0.25rem solid transparent;
-   border-radius: 50%;
-   font-size: 0;
    transition: transform 0.1s;
  }
  
@@ -334,7 +266,6 @@
     width: 20px;
     height: 20px;
     transform: translateY(-50%);
-    /* border-radius: 50%; */
     font-size: 0;
     outline: 0;
     margin-top: 37.5%;
@@ -346,22 +277,20 @@
   bottom: 0;
   width: 20px;
   height: 20px;
-  transform: translateY(-50%);
-  /* border-radius: 50%; */
+  transform: translateY(-42%);
   font-size: 0;
   outline: 0;
-  margin-top: 37.5%;
  }
  
  .carousel::before,
  .carousel__prev {
-   left: 4rem;
+   left: 12rem;
    bottom: 1rem;
  }
  
  .carousel::after,
  .carousel__next {
-   right:4rem;
+   right:12.5rem;
    bottom:1rem;
  }
  
@@ -369,10 +298,7 @@
  .carousel::after {
    content: '';
    z-index: 1;
-   background-color: #333;
-   background-size: 1.5rem 1.5rem;
-   background-repeat: no-repeat;
-   background-position: center center;
+   background: center center no-repeat;
    color: #fff;
    font-size: 2.5rem;
    line-height: 4rem;
@@ -387,11 +313,13 @@
  .carousel::after {
    background-image: url("./arrow_forward.svg");
  }
- 
+ .horizontal{
+  position: absolute;
+  top: 38px;
+ }
  .message-box {
-  width: 500px; /* Just for demo purpose */
+  width: 600px;
   border: 2px solid #B9FF66;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
   position: relative;
   border-radius: 25px;
   color: white;
@@ -416,10 +344,38 @@
 .message-box::after {
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-top: 20px solid #000000;
+  border-top: 20px solid #191A23;
   bottom: -19.3px;
   left: 26px;
 }
 .bg-color{
-   padding: 10px;
+  padding: 30px 30px;
+}
+.down{
+  margin: 35px 0 0 45px;
+}
+@media screen and (max-width:767px) {
+      .message-box{
+        width: 300px;
+      }
+      .horizontal{
+        top: 18px;
+      }
+      .carousel__slide{
+        height: 500px;
+      }
+      .carousel::before{
+        left: 17px;
+      }
+      .carousel::after{
+        right: 17px;
+      }
+}
+@media screen and (max-width:344px) {
+    .carousel__slide{
+      height: 460px;
+    }
+    .message-box{
+      width: 269px;
+    }
 }
